--- a/ReadMe
+++ b/ReadMe
@@ -22,4 +22,4 @@ Password: RailPass@123
 Already Created Pass No: 305788314
 
 
-For More Details visit: https://phpgurukul.com/
+All the credit goes to (https://github.com/ksm2429).
